# blender-ai-agent

./: .gitignore  README.md  blender_ai_cursor_task (1).md  env.example  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  start.bat  start.sh
.history/: README_20250411160323.md  README_20250411162037.md  setup_20250411160718.py
.history/backend/: __init___20250411160734.py  app_20250411160530.py  app_20250411160533.py  app_20250411165447.py  app_20250411165602.py  app_20250411165604.py  app_20250411165614.py  app_20250412101629.py
.history/blender_agent/: __init___20250411160821.py  websocket_server_20250411160227.py  websocket_server_20250411165240.py  websocket_server_20250411165457.py  websocket_server_20250411165459.py  websocket_server_20250411165509.py  websocket_server_20250411165703.py  websocket_server_20250412101610.py  websocket_server_20250412101708.py
.history/examples/: client_example_20250411165304.py  file_import_example_20250411160600.py
.history/tmp/: cube_test_20250412111608.py  run_test_client_20250411164612.py  simple_test_20250411164840.py  simple_test_20250411164915.py  simple_test_20250411165648.py  simple_test_20250412101643.py  simple_test_20250412101834.py  (+6 more)
backend/: app.py  config.py  requirements.txt
examples/: __init__.py  client_example.py
frontend/: index.html  next.config.js  package-lock.json  package.json  server.js  tailwind.config.js
tmp/: api_test.py  blender_addon.py  simple_test.py  simple_websocket_server.py  start_blender.py  test_client.py  test_websocket.py  tmp_blender_code.py
(+39 files in other folders)
