[metadata]
name = blender-ai-agent
version = 0.1.0
description = AI Agent for controlling Blender through natural language
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = backend
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.100.0
    pydantic>=2.0.0
    uvicorn>=0.23.0
    websockets>=11.0.0
    python-multipart
    python-dotenv>=1.0.0
    requests
    beautifulsoup4
    numpy
    chromadb
    langchain
    sentence-transformers
    ollama>=0.1.0

[options.packages.find]
where = backend 